# issue_tracker_axum

./: .gitignore  Cargo.toml  Makefile  docker-compose.yaml
api/: Cargo.toml
api/src/: main.rs
auth/: Cargo.toml  Dockerfile
auth/src/: lib.rs  main.rs
auth/src/controllers/: auth_routers.rs  fallback_route.rs  mod.rs
auth/src/middlewares/: auth_middleware.rs
auth/src/models/: auth_model.rs  jwt_model.rs  mod.rs  user_model.rs
auth/src/repository/: user_repository.rs
auth/src/services/: auth_service.rs  hello_service.rs  mod.rs  user_service.rs
auth/src/utils/: db.rs  jwt.rs  mod.rs  password.rs  response.rs  shutdown.rs
board_api/: Cargo.toml  Dockerfile
board_api/src/: lib.rs  main.rs
board_api/src/controllers/: board_routers.rs  fallback_controller.rs  mod.rs
board_api/src/models/: board_model.rs  board_response_model.rs  category.rs  mod.rs
board_api/src/services/: board_service.rs
issue_api/: Cargo.toml  Dockerfile
issue_api/src/: main.rs
issue_api/src/controllers/: issue_router.rs  mod.rs
issue_api/src/models/: issue_model.rs  issue_response.rs  mod.rs
issue_api/src/service/: issue_service.rs  mod.rs
issue_api/src/utils/: app_state.rs
nginx/: nginx.conf
